[package]
name = "tomlconv"
version = "0.1.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "This crate provides convenient traits for converting between TOML and serializable values"
documentation = "https://docs.rs/tomlconv"
homepage = "https://github.com/sile/tomlconv"
repository = "https://github.com/sile/tomlconv"
readme = "README.md"
keywords = ["toml"]
license = "MIT"

[badges]
travis-ci = {repository = "sile/tomlconv"}

[dependencies]
serde = "1"
toml = "0.4"
trackable = "0.1"

[dev-dependencies]
serde_derive = "1"