[package]
name = "serdeconv"
version = "0.1.2"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "This crate provides convenient traits and functions for converting between TOML and serializable values"
documentation = "https://docs.rs/serdeconv"
homepage = "https://github.com/sile/serdeconv"
repository = "https://github.com/sile/serdeconv"
readme = "README.md"
keywords = ["toml"]
license = "MIT"

[badges]
travis-ci = {repository = "sile/serdeconv"}

[dependencies]
serde = "1"
serde_json = "1"
rmp-serde = "0.13"
toml = "0.4"
trackable = "0.1"

[dev-dependencies]
serde_derive = "1"