[package]
name = "serdeconv"
version = "0.4.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "This crate provides convenient traits and functions for converting between TOML/JSON/MessagePack strings and serializable values."
documentation = "https://docs.rs/serdeconv"
homepage = "https://github.com/sile/serdeconv"
repository = "https://github.com/sile/serdeconv"
readme = "README.md"
keywords = ["toml", "json", "messagepack"]
license = "MIT"

[badges]
travis-ci = {repository = "sile/serdeconv"}

[dependencies]
serde = "1"
serde_json = "1"
rmp-serde = "1"
toml = { version = "0.7", features = ["parse"] }
trackable = "1"

[dev-dependencies]
serde_derive = "1"